Connecting the DB

--- a/SecureWebSite.Server/appsettings.json
+++ b/SecureWebSite.Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=WINDOWSXP\\AQYANOOS;Database=SecureWebsite;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "Default": "Server=DESKTOP-N2P1BBN\\SQLEXPRESS;Database=FMA_TEST2;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
